# tcmb_evds

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/common/: mod.rs
src/date/: mod.rs
src/error/: mod.rs
src/evds_basic/: mod.rs
src/evds_currency/: frequency_formulas.rs  mod.rs
src/traits/: having_date_validation.rs  making_list.rs  making_url_format.rs
