[package]
name = "tcmb_evds"
version = "0.1.0"
authors = ["asari555 <asari571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async_mode"]
async_mode = []
sync_mode = []

[dependencies]
curl = "0.4.38"